@@ -7,5 +7,5 @@ Name: Sratom
 Version: @SRATOM_VERSION@
 Description: LV2 Atom RDF serialisation library
 Requires: lv2 @PKG_serd_0@ @PKG_sord_0@
-Libs: -L${libdir} -l@LIB_SRATOM@
+Libs: -L${libdir} -l@LIB_SRATOM@ -lsord-0 -lserd-0 -lm
 Cflags: -I${includedir}/sratom-@SRATOM_MAJOR_VERSION@
